# pyframe

./: .gitignore  .pre-commit-config.yaml  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
src/pyframe/: main.py
src/resources/: .gitignore  pyproject.txt
